Implement, feature#modifications
