# docs/swagger.yaml
@@ -1,6 +1,62 @@
 consumes:
 - application/json
 definitions:
+  AppointmentPatch:
+    properties:
+      date:
+        type: string
+      dentist_id:
+        type: integer
+      description:
+        type: string
+      patient_id:
+        type: integer
+    type: object
+  AppointmentPost:
+    properties:
+      date:
+        type: string
+      dentist_license:
+        type: string
+      description:
+        type: string
+      patient_dni:
+        type: string
+    required:
+    - date
+    - dentist_license
+    - description
+    - patient_dni
+    type: object
+  AppointmentPut:
+    properties:
+      date:
+        type: string
+      dentist_id:
+        type: integer
+      description:
+        type: string
+      patient_id:
+        type: integer
+    required:
+    - date
+    - dentist_id
+    - description
+    - patient_id
+    type: object
+  AppointmentResponse:
+    properties:
+      date:
+        type: string
+      dentist_id:
+        type: integer
+      description:
+        type: string
+      id:
+        type: integer
+      patient_id:
+        type: integer
+    type: object
   DentistPatch:
     properties:
       last_name:
@@ -141,6 +197,151 @@ info:
   title: Dental Clinic API
   version: "2.0"
 paths:
+  /Appointments:
+    get:
+      description: Get all Appointments
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/AppointmentResponse'
+            type: array
+      summary: Get all Appointments
+      tags:
+      - Appointments
+    post:
+      description: Create a Appointment
+      parameters:
+      - description: AppointmentResponse
+        in: body
+        name: Appointment
+        required: true
+        schema:
+          $ref: '#/definitions/AppointmentPost'
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/AppointmentResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/Error'
+      security:
+      - Bearer: []
+      summary: Create a Appointment
+      tags:
+      - Appointments
+  /Appointments/{id}:
+    delete:
+      description: Delete a Appointment
+      parameters:
+      - description: AppointmentResponse ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "204":
+          description: No Content
+          schema:
+            $ref: '#/definitions/AppointmentResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/Error'
+      summary: Delete a Appointment
+      tags:
+      - Appointments
+    get:
+      description: Get Appointment by DNI
+      parameters:
+      - description: AppointmentResponse DNI
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/AppointmentResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/Error'
+      summary: Get Appointment by DNI
+      tags:
+      - Appointments
+    patch:
+      description: Patch a Appointment
+      parameters:
+      - description: AppointmentResponse ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: AppointmentResponse
+        in: body
+        name: Appointment
+        required: true
+        schema:
+          $ref: '#/definitions/AppointmentPatch'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/AppointmentResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/Error'
+      summary: Patch a Appointment
+      tags:
+      - Appointments
+    put:
+      description: Update a Appointment
+      parameters:
+      - description: AppointmentResponse ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: AppointmentResponse
+        in: body
+        name: Appointment
+        required: true
+        schema:
+          $ref: '#/definitions/AppointmentPut'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/AppointmentResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/Error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/Error'
+      summary: Update a Appointment
+      tags:
+      - Appointments
   /Dentists:
     get:
       description: Get all Dentists
@@ -419,3 +620,13 @@ tags:
     description: Patient operations for managing Patient
     url: http://swagger.io/terms/
   name: Patient
+- description: Dentist operations for managing Dentist
+  externalDocs:
+    description: Dentist operations for managing Dentist
+    url: http://swagger.io/terms/
+  name: Dentist
+- description: Appointment operations for managing Appointment
+  externalDocs:
+    description: Appointment operations for managing Appointment
+    url: http://swagger.io/terms/
+  name: Appointment
